[gd_scene load_steps=3 format=3 uid="uid://dswg7dmxck6ue"]

[ext_resource type="Texture2D" uid="uid://ch1ins151k217" path="res://assets/placeholder.png" id="1_70kwr"]
[ext_resource type="Script" path="res://scenes/additional/library_additional/note_creation_add/select_image.gd" id="2_j84vu"]

[node name="select_image" type="TextureRect"]
custom_minimum_size = Vector2(150, 150)
size_flags_horizontal = 4
texture = ExtResource("1_70kwr")
expand_mode = 1
stretch_mode = 6
script = ExtResource("2_j84vu")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
ok_button_text = "Открыть"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
